--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ pursuing a major in Computer Science and Engineering from the <a
 href=http://www.iitkgp.ac.in/ class=green_color target=_blank>Indian
 Institute of Technology Kharagpur</a>, India. I am deeply
 interested in Algorithms and occasionally contributing
-to Open source software. I am accustomed to working on Linux operating
+to Open Source software. I am accustomed to working on Linux operating
 systems. I am a part of my college's premier coding club "CodeClub" 
 and the Game Theory Society, which has always been an awesome learning experience !!
 
@@ -42,8 +42,8 @@ FIRA 2015, South Korea</a> and I represented my college
 in <a href=http://www.robocup2016.org/en/ class=green_color target=_blank>RoboCup 2016</a> held in Leipzig, Germany.
 
 </div></div></div><div class="section fp-auto-height love"data-anchor=love><div class=major_skill><div class=skill_wrap id=canv_wrap><h1 class=ribbon><strong class=ribbon-content>My Skills</strong></h1><canvas data-sr="enter left move 100px over 1s"height=300 id=mySkill width=400></canvas></div><div class=why_code id=why_s>
-<p>I love to make softwares that make my everyday tasks quicker or easier. I like to code, not just for the pleasure of coding, but also to help and simplify chores for others. <a href=https://github.com/VaibhavAgarwalVA/Tiwary class=skill_link target=_blank>Tiwary</a> is one such product of my aim to make the world an easier place through quality and community-beneficial code.
-I love robotics and like to develope newer and better strategies for robotic coordination and gameplay. 
+<p>I love to make softwares that make my everyday tasks quicker or easier. I like to code, not just for the pleasure of coding, but also to help and simplify chores for others. <a href=https://github.com/VaibhavAgarwalVA/Tiwary class=skill_link target=_blank>Tiwary</a> is one such product of my aim to make the world an easier place through quality and community-beneficial code.</br>
+I love robotics and like to develop newer and better strategies for robotic coordination and gameplay. 
 <p data-sr="enter top move 35px over 1s"styl=margin:15px;>I've written codes in <span id=code_lang></span> <i class=typed-cursor></i></p><span data-sr="enter top move 35px over 1s">You can catch me here at <a href=https://github.com/VaibhavAgarwalVA class=skill_link>Github</a></span></div></div>
 
 <div class="conatiner mini_skill"><h1 class="ribbon mini"><strong class=ribbon-content><span>My Skills</span></strong></h1><p style=font-size:1em;color:#807979;text-align:center;padding:0;margin-top:34px;line-height:16px>I love to make softwares that make my everyday tasks quicker or easier. I like to code, not just for the pleasure of coding, but also to help and simplify chores for others. <a href=https://github.com/VaibhavAgarwalVA/Tiwary class=skill_link target=_blank>Tiwary</a> is one such product of my aim to make the world an easier place through quality and community-beneficial code.
