--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     font-family: 'Quicksand', sans-serif;
     background: black;
     color: black;
-    background-image: url('ethereum-prism.svg');
+    background-image: url('diamond.png');
     background-position: center center;
     background-size: 90% auto;
     background-repeat: no-repeat;
