--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     font-size: 6.5vw;
     font-weight: 100;
     font-family: 'Quicksand', sans-serif;
-    background: black;
-    color: black;
+    background: #141414;
+    color: #141414;
     background-image: url('diamond.png');
     background-position: center center;
     background-size: 90% auto;
