changed github to website

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <i>Software Developer</i>
             <br/>
             <span class="fold-down-on-hover">
-<a title="github" href="http://github.com/VaibhavAgarwalVA" target="_blank">Github</a>
+<a title="website" href="http://vaibhavagarwalva.github.io/index_old.html" target="_blank">Website</a>
 &nbsp;&nbsp;
 <a title="email" href="mailto:vaiagarwal96@gmail.com">Email</a>
 </span>
